fix(overflow issues with merge)
- horizontal overflow
- the fact that it's a fake horizontal scroll and the page is also scrolling down showed because of the background
- also restoring the css classes used for the POC thou it'll be deleted again soon

--- a/Sakura/src/style.css
+++ b/Sakura/src/style.css
@@ -1,60 +1,50 @@
 @font-face {
-  font-family: 'B Barusan Lindu';
-  src: url('/bBarusanLindu.ttf') format('truetype');
+  font-family: "B Barusan Lindu";
+  src: url("/bBarusanLindu.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
-body{
+body {
   margin: 0px;
+  overflow-x: hidden;
 
   font-family: "Mori";
-  background: radial-gradient(129% 99% at 200% 85%, rgb(220, 200, 180) 20%, rgb(232, 219, 201) 90%),
-    url('https://assets.codepen.io/16327/noise-e82662fe.png'),
-    url('https://assets.codepen.io/16327/noise-e82662fe.png'),
-    url('https://assets.codepen.io/16327/noise-e82662fe.png');  
-  background-blend-mode: color-dodge;
 }
-.Japan{
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  position: absolute;
-}
-.text{
+
+.text {
   position: relative;
   color: rgb(242, 246, 249);
   padding: 0;
   margin: 0;
 }
 
-#burnCanvas{
+#burnCanvas {
   z-index: 900;
- width: 100%;
- height: 100%;
- position: absolute;
- pointer-events: none;
- background-color: transparent;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  pointer-events: none;
+  background-color: transparent;
 }
 
 #startButton {
   z-index: 1000;
   position: absolute;
-  top: 57%;                     /* Centre verticalement */
-  left: 120px;                  /* Distance du bord gauche */
-  transform: translateY(-50%);  /* Corrige l’alignement vertical */
+  top: 57%; /* Centre verticalement */
+  left: 120px; /* Distance du bord gauche */
+  transform: translateY(-50%); /* Corrige l’alignement vertical */
 
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  font-family: 'B Barusan Lindu', sans-serif;
+  font-family: "B Barusan Lindu", sans-serif;
   font-size: 144px;
   color: black;
   cursor: pointer;
   user-select: none;
   pointer-events: auto;
   opacity: 1;
-
 }
 
 #startButton span {
@@ -62,23 +52,34 @@ body{
   margin: 2px 0;
 }
 
-#main-container{
+#main-container {
   display: flex;
 }
 
-.scene-container{
+.scene-container {
   /*screen size should be 1920x1080*/
-  width: 100vw; 
+  width: 100vw;
   height: 100vh;
   flex-shrink: 0;
   display: flex;
   justify-content: center;
   align-items: center;
+  background: radial-gradient(
+      129% 99% at 200% 85%,
+      rgb(220, 200, 180) 20%,
+      rgb(232, 219, 201) 90%
+    ),
+    url("https://assets.codepen.io/16327/noise-e82662fe.png"),
+    url("https://assets.codepen.io/16327/noise-e82662fe.png"),
+    url("https://assets.codepen.io/16327/noise-e82662fe.png");
+  background-blend-mode: color-dodge;
 }
 
-.scene{
-  width: 1664px; /* 1920 - 128*2 */
-  height: 824px; /* 1080 - 128*2 */
+.scene {
+  width: 1920px;
+  max-width: 80%;
+  height: 1080px;
+  max-height: 80%;
   border: 1px solid black;
   overflow: hidden;
 }
@@ -95,7 +96,32 @@ body.blur-active *:not(#startButton):not(#startButton *) {
   transition: filter 0.3s ease;
 }
 
-.decreaseOpacity{
+.decreaseOpacity {
   opacity: 0 !important;
 }
 
+/* test */
+
+.red {
+  width: 100px;
+  height: 100px;
+  background-color: red;
+}
+
+.blue {
+  width: 100px;
+  height: 100px;
+  background-color: blue;
+}
+
+.yellow {
+  width: 100px;
+  height: 100px;
+  background-color: yellow;
+}
+
+.green {
+  width: 100px;
+  height: 100px;
+  background-color: green;
+}
